--- a/scss/base/_listas.scss
+++ b/scss/base/_listas.scss
@@ -73,3 +73,26 @@ h5 {
   color: #18b3b3;
   transition: .3s ease;
 }
+
+.history-image {
+  object-fit: cover;
+  width: 600px; 
+  height: 300px;
+}
+
+@media (max-width: 768px) {
+  .history-image {
+      width: 100%;
+  }
+}
+
+/* INICIO SHOP */
+
+.gallery-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* FIN SHOP */
+
