estilos del formulario de contacto en scss

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,7 @@
 /* Nesting */
 
 @import 'components/header';
+@import 'components/contactform';
 @import 'components/footer';
 @import 'components/wspicon';
 @import 'base/extends.scss';
