--- a/css/styles.css
+++ b/css/styles.css
@@ -47,14 +47,6 @@ input[type=checkbox] {
   align-items: center;
   justify-content: center;
 }
-
-label {
-  font-size: 16px;
-  font-family: "Poppins", sans-serif;
-  font-weight: 200;
-  cursor: pointer;
-}
-
 input[type=checkbox]:after {
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
@@ -64,16 +56,21 @@ input[type=checkbox]:after {
   color: white;
   display: none;
 }
-
 input[type=checkbox]:hover {
   background-color: #a5a5a5;
+}
+
+label {
+  font-size: 16px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 200;
+  cursor: pointer;
 }
 
 input[type=checkbox]:checked {
   background-color: #18b3b3;
 }
-
-input[type=checkbox]:checked::after {
+input[type=checkbox]:checked:after {
   display: block;
 }
 
