--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -3,7 +3,7 @@
     display: flex;
     text-align: center;
     justify-content: center;
-    margin-top: 20px;
+    margin: 4% 0 0 0;
     ul {
         display: flex;
         justify-content: center;
