todos los estilos ya estan en scss

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,7 @@
 /* Nesting */
 
 @import 'components/header';
+@import 'components/doubts';
 @import 'components/contactform';
 @import 'components/footer';
 @import 'components/wspicon';
