--- a/css/styles.css
+++ b/css/styles.css
@@ -11,9 +11,10 @@
   font-size: 18px;
   font-weight: bold;
   color: #000;
+  margin-right: 5px;
 }
 #menu ul li a:hover {
-  background: rgba(0, 0, 0, 0.1);
+  color: #18B3B3;
   transition: all 0.5s ease;
 }
 
@@ -293,11 +294,13 @@ input[type=checkbox]:checked:after {
   font-size: 25px;
   box-shadow: 2px 2px 3px #999;
   z-index: 100;
+  transition: all 0.5s ease;
 }
 .float:hover {
   text-decoration: none;
   color: #25d366;
   background-color: #fff;
+  transition: all 0.5s ease;
 }
 
 .my-float {
