--- a/scss/components/_wspicon.scss
+++ b/scss/components/_wspicon.scss
@@ -13,11 +13,13 @@
     font-size:25px;
 	box-shadow: 2px 2px 3px #999;
     z-index:100;
+    transition: all 0.5s ease;
 
     &:hover {
         text-decoration: none;
         color: #25d366;
         background-color:#fff;
+        transition: all 0.5s ease;
     }
 }
 
