--- a/css/styles.css
+++ b/css/styles.css
@@ -443,6 +443,38 @@ h5 {
   height: 300px;
 }
 
+.div-img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.div-img.hidden {
+  overflow: hidden;
+}
+.div-img .img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  transform: scale(1);
+  -ms-transform: scale(1);
+  -moz-transform: scale(1);
+  -webkit-transform: scale(1);
+  -o-transform: scale(1);
+  -webkit-transition: all 400ms ease-in-out;
+  -moz-transition: all 400ms ease-in-out;
+  -ms-transition: all 400ms ease-in-out;
+  -o-transition: all 400ms ease-in-out;
+}
+.div-img:hover .img {
+  transform: scale(0.8);
+  -ms-transform: scale(0.95);
+  -moz-transform: scale(0.95);
+  -webkit-transform: scale(0.95);
+  -o-transform: scale(0.95);
+  border-radius: 10px;
+}
+
 @media (max-width: 768px) {
   .history-image {
     width: 100%;
@@ -453,6 +485,16 @@ h5 {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.compra:before {
+  content: "Comprar";
+  text-align: Center;
+}
+
+.compra:hover:before {
+  content: "Proximamente";
+  text-align: Center;
 }
 
 /* FIN SHOP */
