--- a/scss/base/_listas.scss
+++ b/scss/base/_listas.scss
@@ -80,6 +80,41 @@ h5 {
   height: 300px;
 }
 
+.div-img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  &.hidden{
+        overflow: hidden;
+    }
+  .img{
+      display:block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 100%;   
+      transform:scale(1);
+      -ms-transform:scale(1); // IE 9 
+      -moz-transform:scale(1); // Firefox 
+      -webkit-transform:scale(1); // Safari and Chrome 
+      -o-transform:scale(1); // Opera 
+      -webkit-transition: all 400ms ease-in-out; // IE 9
+      -moz-transition: all 400ms ease-in-out; // Firefox
+      -ms-transition: all 400ms ease-in-out; // Safari and Chrome 
+      -o-transition: all 400ms ease-in-out; // Opera       
+  }        
+  &:hover{
+      .img{
+          transform:scale(0.8);
+          -ms-transform:scale(0.95); // IE 9 
+          -moz-transform:scale(0.95); // Firefox 
+          -webkit-transform:scale(0.95); // Safari and Chrome 
+          -o-transform:scale(0.95); // Opera
+          border-radius: 10px;
+      }
+  
+  } 
+}
+
 @media (max-width: 768px) {
   .history-image {
       width: 100%;
@@ -94,5 +129,13 @@ h5 {
   object-fit: cover;
 }
 
-/* FIN SHOP */
+.compra:before {
+  content:"Comprar";
+  text-align:Center;
+}
+.compra:hover:before {
+  content:"Proximamente";
+  text-align:Center;
+}
 
+/* FIN SHOP */
