no quiero laburar mas

--- a/css/styles.css
+++ b/css/styles.css
@@ -461,10 +461,7 @@ h5 {
   -moz-transform: scale(1);
   -webkit-transform: scale(1);
   -o-transform: scale(1);
-  -webkit-transition: all 400ms ease-in-out;
-  -moz-transition: all 400ms ease-in-out;
-  -ms-transition: all 400ms ease-in-out;
-  -o-transition: all 400ms ease-in-out;
+  transition: all 400ms ease-in-out;
 }
 .div-img:hover .img {
   transform: scale(0.8);
