--- a/scss/base/_listas.scss
+++ b/scss/base/_listas.scss
@@ -97,10 +97,7 @@ h5 {
       -moz-transform:scale(1); // Firefox 
       -webkit-transform:scale(1); // Safari and Chrome 
       -o-transform:scale(1); // Opera 
-      -webkit-transition: all 400ms ease-in-out; // IE 9
-      -moz-transition: all 400ms ease-in-out; // Firefox
-      -ms-transition: all 400ms ease-in-out; // Safari and Chrome 
-      -o-transition: all 400ms ease-in-out; // Opera       
+      transition: all 400ms ease-in-out; // IE 9   
   }        
   &:hover{
       .img{
