--- a/scss/base/_listas.scss
+++ b/scss/base/_listas.scss
@@ -32,10 +32,15 @@ h2 {
   text-align: center;
 }
 
-h5 {
-  color: #4d5371;
+.h2-icons {
+  font-size: 22.96px;
+  color: #000;
 }
 
+.h2-shop {
+  color: #4d5371;
+  font-size: 20px;
+}
 /* SLIDER DE IMAGENES */
 
 .carousel-inner {
