--- a/css/styles.css
+++ b/css/styles.css
@@ -397,8 +397,14 @@ h2 {
   text-align: center;
 }
 
-h5 {
+.h2-icons {
+  font-size: 22.96px;
+  color: #000;
+}
+
+.h2-shop {
   color: #4d5371;
+  font-size: 20px;
 }
 
 /* SLIDER DE IMAGENES */
