--- a/css/styles.css
+++ b/css/styles.css
@@ -489,6 +489,50 @@ h2 {
   height: 100%;
   object-fit: cover;
 }
+/* PRODUCTOS & CARRITO */
+.link-text{
+  color: #000;
+  font-size: 18px;
+  font-weight: 600;
+}
+.link-text:hover {
+  color: #18B3B3;
+}
+/* COLOR DEL TEXTO DE LAS CARDS */
+.text {
+  color: #18B3B3;
+}
+/* BOTON DE COMPRA */
+.button-compra {
+  background: #18b3b3;
+  color: #fff;
+  padding: 14px;
+  letter-spacing: 4px;
+  transition: all 0.25s ease-in;
+}
+.button-compra:hover {
+  color: #18b3b3;
+  cursor: pointer;
+  background: #fff;
+  border-radius: 5px;
+  transition: all 0.25s ease-in;
+}
+/* BOTON DE COMPRA EN EL CARRITO */
+.button-comprar {
+  background: #18b3b3;
+  color: #fff;
+  padding: 10px;
+  letter-spacing: 4px;
+  transition: all 0.25s ease-in;
+  margin-top: 0px;
+}
+.button-comprar:hover {
+  color: #18b3b3;
+  cursor: pointer;
+  background: #fff;
+  border-radius: 5px;
+  transition: all 0.25s ease-in;
+}
 
 /* FIN SHOP */
 
